       Canon MULTIPASS MP500
       Canon MULTIPASS MP700
       Canon MULTIPASS MP730
       Canon MULTIPASS MP750
       Canon MULTIPASS MP760
       Canon MULTIPASS MP770
       Canon MULTIPASS MP780
       Canon MULTIPASS MP790
       Canon MULTIPASS MP830
       Canon PIXUS iP3100
       Canon PIXUS iP4100
       Canon i560
       Canon i850
       Canon i860
       Canon i865

     * Lexmark inkjet and compatible printers:

       Compaq IJ1200
       Lexmark X73

     * PCL laser printers (monochrome only):

       Lexmark Optra E220
       Xerox WorkCentre M118

  2) CUPS 1.2 is now supported using on-the-fly PPD file generation.
     In addition, the resolution names are all compliant with the PPD
     specification.  cups-genppdupdate correctly updates on-the-fly
     PPD files.

  3) The native CUPS driver offers a new Shrink Page If Necessary to
     Fit Borders option, enabling the user to choose how to fit the
     output to the imageable area of the page.  This is useful when a
     printer offers a choice of imageable areas, typically normal
     (which has margins) and full bleed (which allows printing to the
     edge of the paper, or even beyond).  The following options are
     available:

     * Shrink (default): the output is shrunk if necessary to fit the
       imageable area of the page.  If a printer is capable of
       borderless operation but normal margins are selected, the
       output will be shrunk.  This will print the entire page
       (nothing will be lost), but will not preserve the dimensions of
       the printout.  For example, a line intended to be 10 cm long
       may print smaller than that.

     * Crop: the output is cropped if necessary to fit the imageable
       area of the page.  The dimensions of the page will be preserved
       (a line intended to be 10 cm long will print out exactly 10
       cm), but the edges of the output may be truncated (cropped).
