@@ -260,16 +260,20 @@
 #gptofoo escp2-cx4600 printer/Epson-Stylus_CX4600
 #gptofoo escp2-cx4700 printer/Epson-Stylus_CX4700
 #gptofoo escp2-cx4800 printer/Epson-Stylus_CX4800
+#gptofoo escp2-cx5000 printer/Epson-Stylus_CX5000
+#gptofoo escp2-cx5000f printer/Epson-Stylus_CX5000F
 #gptofoo escp2-cx5100 printer/Epson-Stylus_CX5100
 #gptofoo escp2-cx5200 printer/Epson-Stylus_CX5200
 #gptofoo escp2-cx5300 printer/Epson-Stylus_CX5300
 #gptofoo escp2-cx5400 printer/Epson-Stylus_CX5400
 #gptofoo escp2-cx5700 printer/Epson-Stylus_CX5700
 #gptofoo escp2-cx5800 printer/Epson-Stylus_CX5800
+#gptofoo escp2-cx6000 printer/Epson-Stylus_CX6000
 #gptofoo escp2-cx6300 printer/Epson-Stylus_CX6300
 #gptofoo escp2-cx6400 printer/Epson-Stylus_CX6400
 #gptofoo escp2-cx6500 printer/Epson-Stylus_CX6500
 #gptofoo escp2-cx6600 printer/Epson-Stylus_CX6600
+#gptofoo escp2-cx7000f printer/Epson-Stylus_CX7000F
 #gptofoo escp2-cx7700 printer/Epson-Stylus_CX7700
 #gptofoo escp2-cx7800 printer/Epson-Stylus_CX7800
 #gptofoo escp2-cx8300 printer/Epson-Stylus_CX8300
